--- a/src/pages/styles/home.css
+++ b/src/pages/styles/home.css
@@ -84,7 +84,7 @@
     display: grid;
     width: 100%;
     height: 500px;
-    background: linear-gradient(166deg, rgba(241,196,15,0.9) 0%, rgba(255,140,55,0.9) 100%);
+    background: rgba(23, 23, 29, 0.9);
     grid-template-columns: 1fr 500px;
     
 
@@ -92,7 +92,7 @@
     grid-template-areas: 'element1 element2';
    
     column-gap: 20px;
-    box-shadow: 0px 2px 22px 4px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 22px 4px rgba(0,0,0,0.2);
 
   
     
@@ -104,69 +104,58 @@
 
     display: grid;
     grid-area: element1;
-    grid-template-rows: 1fr 200px;
-    grid-template-areas: 'img'
-    'content';
-    width: calc(100% - 20px);
+
+    width: 600px;
     margin:0 auto;
-  
-    border-radius: 10px;
+    background: rgba(23, 23, 29, 0.9);
+    border-radius: 40px 40px 40px 40px;
     margin-bottom: 15px; 
-    margin-top: 15px;   
-    
+    margin-top: 15px;
 }
 
-
-.container-Felement .imgF1{
-    margin: 0 auto;
+.container-Felement figure{
     width: 600px;
-    margin-top: 5px;
+    height: 100%;
+    position: relative;
+    transition: all ease .5s;
+    transform-style: preserve-3d;
+    transform: perspective(600px) rotateY(0deg);
+}
 
-    display: grid;
-    grid-area: img;
-    background-image: url('../../IMAGES/h1.jpg');
-    background-position: center;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border-radius: 40px 40px 0px 0px;
-    box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.75);
+figure .frontal,
+figure .trasera{
+    width: 100%;
+    height: 100%;
+
+    transition: all ease .5s;
+
+}
+
+figure .frontal{
+    display: block;
     
+
+}
+    
+
+figure .trasera{
+    position: absolute;
+    top: 0;
+    padding: 30px;
+    transform: perspective(600px) rotateY(180deg);
 }
 
 
-.container-Felement .infoF1{
-    display: grid;
-    grid-area: content;
-    grid-template-rows: 50px 1fr;
-    grid-template-areas: 'title'
-    'contentf';
-    margin: 0 auto;
-    width: 600px;
-    border-radius: 0px 0px 10px 10px;
- 
-
-
+.container-Felement .frontal{
+    width:inherit;
+    height: inherit;
 }
-.infoF1 .titleF1{
-    display: grid;
-    grid-area: title;
-    background: rgba(51, 142, 218, 0.81);
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.75);
 
-}
-.infoF1 .pF1{
-    display: grid;
-    grid-area: contentf;
-    background: rgba(51, 142, 218, 0.81);
-    margin-top: 4px;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.75);
-    border-radius: 0px 0px 40px 40px;
 
-}
+
+
+
+
 
 .container-grid .container-Selement{
     display: grid;
