--- a/src/components/styles/BadgeForm.css
+++ b/src/components/styles/BadgeForm.css
@@ -1,25 +1,14 @@
-.BadgeNew__hero {
-   width:  100%;
-   height: 600px;
-  }
-
-  .BadgeNew__hero img{
-    width: inherit;
-    height: inherit;
-
-  }
-
-  .formulario{
+.formulario{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
    width: 400px;
-
+   border-radius: 50px;
    height: 650px;
    
     margin-bottom: 20px;
- 
+    color: #fff;
 
     background: rgba(23, 23, 29, 0.9);
 
@@ -70,4 +59,3 @@
  button{
    margin: 0 auto;
  }
-
