--- a/src/components/styles/BadgesLi.css
+++ b/src/components/styles/BadgesLi.css
@@ -1,5 +1,6 @@
 .containerli{
-    background: linear-gradient(166deg, rgba(241,196,15,1) 0%, rgba(255,140,55,1) 100%);
+    background: rgba(23, 23, 29, 0.9);
+    box-shadow: 0px 2px 36px 9px rgba(0,0,0,0.97);
 
     display: grid;
     grid-template-columns: 100px 1fr 150px;
@@ -9,7 +10,9 @@
     grid-column-gap: 10px;
     border-radius: 10px;
     width: 100%;
-    box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.4);
+    border-left:1px solid #f9fafc;
+    border-right:1px solid #f9fafc;
+ 
     height: 100px;
 
 }
@@ -32,6 +35,7 @@
 .containerli__info{
     display: grid;
     grid-area: content;
+    justify-content: start;
     align-items: center;
     margin-top: 0px;
   
@@ -40,7 +44,7 @@
 
 .containerli__info h2{
    margin-top: 5px;
-    color: #ffffff;
+    color: #f9fafc;
     font-size: 25px;
 
     margin-bottom: 0px;
@@ -48,7 +52,7 @@
 }
 .containerli__info h3{
     margin-left: 10px;
-    color: #ffffff;
+    color: #f9fafc;
     font-size: 15px;
     margin-bottom: 15px;
     font-style: italic;
@@ -71,7 +75,7 @@
 .contact p{
     margin-top: 10px;
     text-align: center;
-    color: #17171d;
+    color: #f1c40f;
     font-size: 10px;
     font-family: 'Anton', sans-serif;
 }
