--- a/src/components/styles/bagde.css
+++ b/src/components/styles/bagde.css
@@ -6,7 +6,10 @@
     border-radius: 50px;
     margin-bottom: 50px;
     
-   background: linear-gradient(166deg, rgba(241,196,15,1) 0%, rgba(255,140,55,1) 100%);
+    background: rgba(23, 23, 29, 0.9);
+    box-shadow: 0px 2px 36px 9px rgba(0,0,0,0.97);
+    
+    border: 1px solid #fff;
     
     
     
@@ -21,8 +24,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 3px solid #ec3750;
-    width: 100%;
+    border-bottom: 3px solid #f1c40f;
+    width: calc(100% - 70px);
+    margin-left: 35px;
     height: 100px;
     
     
@@ -34,6 +38,8 @@
     border-radius: 50%;
     width: 80px;
     height:80px;
+    box-shadow: 0px 2px 22px 4px rgba(0,0,0,0.75);
+    
 }
 
 .UserBadge {
@@ -50,6 +56,7 @@
     height: 120px;
     margin-right: 50px;
     border-radius: 50%;
+    box-shadow: 0px 2px 22px 4px rgba(0,0,0,0.75);
     
 
 }
@@ -58,7 +65,7 @@
     color:  #fff;
     font-size: 20px;
   
-    border-bottom: 2px solid  #ec3750 ;
+    border-bottom: 3px solid #f1c40f;
 }
 
 
@@ -75,6 +82,7 @@
     flex-direction: column;
     background: rgba(0, 0, 0, 0.1);
     border: 0.5px solid #fff;
+    box-shadow: 0px 2px 22px 4px rgba(0,0,0,0.75);
     
     
 
@@ -98,7 +106,7 @@
 }
 
 .FooterBadge .twitter{
-    color: #17171d;
+    color: #f1c40f;
     font-family: 'Anton', sans-serif;
     cursor: pointer;
     padding-bottom: 15px;
