--- a/src/pages/styles/BadgeDetails.css
+++ b/src/pages/styles/BadgeDetails.css
@@ -2,25 +2,62 @@
     width: 100%;
     padding: 2rem 0;
     height: 500px;
-    background: url('../../IMAGES/hackhero.png'), #1B1B25;
+    background: url('../../IMAGES/par2.jpg'), #1B1B25;
     background-repeat:no-repeat ;
     background-size: 100% 100%;
     margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
   }
   .BadgeDetails__hero img{
-      width: 400px;
-      height: 400px;
+
+      width: 200px;
+      height: 200px;
   }
   .BadgeDetails__hero-attendant-name {
+    width: 200px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
     color:#fff;
+    border-radius: 40px;
   }
   
   .BadgeDetails__buttons {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin-bottom: 1rem;
+  }
+
+
+  .btn {
+    padding: 0.375rem 2rem;
+  }
+  
+  .btn.btn-primary {
+    color: #1B1B25;
+    background-color: #f1c40f;
+    border-color: #f1c40f;
+  }
+  
+  .btn.btn-primary:not(:disabled):not(.disabled):hover {
+    color: #1B1B25;
+    background-color: #f1c40f;
+    border-color: #f1c40f;
+  }
+  
+  .btn.btn-primary:not(:disabled):not(.disabled):active {
+    color: #1B1B25;
+    background-color: #f1c40f;
+    border-color: #f1c40f;
+  }
+  
+  .btn.btn-primary:not(:disabled):not(.disabled):focus {
+  
+    box-shadow: 0px 0px 0px 0.2rem rgba(241,196,15,1);
   }
