--- a/src/components/styles/Modal.css
+++ b/src/components/styles/Modal.css
@@ -5,7 +5,7 @@
     bottom: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
-  
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,9 +14,13 @@
   .Modal__container {
     position: relative;
     top: 10rem;
-    background-color: #ffffff;
+    background-color: rgba(241,196,15,0.7);
     padding: 1rem;
-    width: 400px;
+    width: 450px;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .Modal__close-button {
@@ -24,6 +28,67 @@
     top: 0;
     right: 0;
     border: 0;
-    background-color: #F5F5F5;
+ background-color: rgba(241,196,15,1);
     padding: 0.5rem 1rem;
+    color:#17171d;
+    border-radius: 50px;
+
+    box-shadow: 0px 0px 31px -8px rgba(0,0,0,0.3);
+  }
+
+  .Modal .btn {
+    padding: 0.375rem 2rem;
+
+  }
+  
+  .Modal .btn.btn-primary {
+    color: #fff;
+    background-color: #17171d;
+    border-color:#17171d;
+    box-shadow: 0px 0px 31px -8px rgba(0,0,0,0.75);
+    margin-right: 50px;
+  }
+  
+  .Modal .btn.btn-primary:not(:disabled):not(.disabled):hover {
+    color: #fff;
+    background-color: #17171d;
+    border-color: #17171d;
+    box-shadow: 0px 0px 31px -8px rgba(0,0,0,0.75);
+
+  }
+  
+  .Modal .btn.btn-primary:not(:disabled):not(.disabled):active {
+    color: #fff;
+    background-color: #17171d;
+    border-color: #17171d;
+    box-shadow: 0px 0px 31px -8px rgba(0,0,0,0.75);
+  }
+  
+  .Modal .btn.btn-primary:not(:disabled):not(.disabled):focus {
+  
+    box-shadow: 0px 0px 0px 0.2rem rgba(23,23,29,1);
+
+  }
+
+  .Modal .btn-danger {
+    color: #fff;
+    background-color: #CD4040;
+    border-color: #CD4040;
+    box-shadow: 0px 0px 31px -8px rgba(0,0,0,0.75);
+  }
+  
+  .Modal .btn-danger:not(:disabled):not(.disabled):hover {
+    color: #fff;
+    background-color: #CD4040;
+    border-color: #CD4040;
+  }
+  
+   .Modal .btn.btn-danger:not(:disabled):not(.disabled):active {
+    color: #fff;
+    background-color: #CD4040;
+    border-color: #CD4040;
+  }
+  
+  . .Modal .btn.btn-danger:not(:disabled):not(.disabled):focus {
+    box-shadow: 0 0 0 0.2rem rgba(255, 64, 64, 0.5);
   }
