--- a/src/pages/styles/BadgeDetails.css
+++ b/src/pages/styles/BadgeDetails.css
@@ -1,63 +1,99 @@
-.BadgeDetails__hero {
+
+
+.containerbadge{
     width: 100%;
-    padding: 2rem 0;
-    height: 500px;
+ 
+    height: 100%;
     background: url('../../IMAGES/par2.jpg'), #1B1B25;
     background-repeat:no-repeat ;
-    background-size: 100% 100%;
-    margin-bottom: 1rem;
+    background-size: 100% 100%;;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
 
   }
-  .BadgeDetails__hero img{
-
-      width: 200px;
-      height: 200px;
-  }
-  .BadgeDetails__hero-attendant-name {
-    width: 200px;
-    height: 200px;
+ 
+  .containerbadge{
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.5);
-    text-align: center;
-    color:#fff;
-    border-radius: 40px;
+    align-items: center;
   }
-  
-  .BadgeDetails__buttons {
+
+  .containerbadge .containeractions{margin-top: 20px;
+    width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 1rem;
+    align-items: center;
+  }
+
+  .containeractions .actions{ 
+     width: 500px;   
+     height: 200px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+
+     align-items: center;
+
+     background: rgba(23, 23, 29, 0.9);
+     box-shadow: 0px 2px 36px 9px rgba(0,0,0,0.97);
+    
+     border: 1px solid #fff;
+  
+ 
+
+    
+    
+  }
+
+  .actions h2{
+    margin-bottom: 50px;
+   
+    letter-spacing: 5px;
+  }
+
+  .containerbadge .badge{
+    width: 500px;
   }
 
 
-  .btn {
+
+
+
+  .actions .btn {
     padding: 0.375rem 2rem;
+    box-shadow: 0px 2px 36px 9px rgba(0,0,0,0.97);
   }
   
-  .btn.btn-primary {
-    color: #1B1B25;
+  .actions .btn.btn-primary {
+    color: #fff;
+    background-color: #f1c40f;
+    border-color:#f1c40f;
+    box-shadow: 0px 2px 36px 9px rgba(0,0,0,0.97);
+    margin-right: 50px;
+  }
+  
+  .actions .btn.btn-primary:not(:disabled):not(.disabled):hover {
+    color: #fff;
     background-color: #f1c40f;
     border-color: #f1c40f;
+    box-shadow: 0px 2px 36px 9px rgba(0,0,0,0.97);
+
   }
   
-  .btn.btn-primary:not(:disabled):not(.disabled):hover {
-    color: #1B1B25;
+  .actions .btn.btn-primary:not(:disabled):not(.disabled):active {
+    color: #fff;
     background-color: #f1c40f;
     border-color: #f1c40f;
+    box-shadow: 0px 2px 36px 9px rgba(0,0,0,0.97);
   }
   
-  .btn.btn-primary:not(:disabled):not(.disabled):active {
-    color: #1B1B25;
-    background-color: #f1c40f;
-    border-color: #f1c40f;
-  }
-  
-  .btn.btn-primary:not(:disabled):not(.disabled):focus {
+  .actions .btn.btn-primary:not(:disabled):not(.disabled):focus {
   
     box-shadow: 0px 0px 0px 0.2rem rgba(241,196,15,1);
+
   }
+
+  
