--- a/src/pages/styles/BadgeEdit.css
+++ b/src/pages/styles/BadgeEdit.css
@@ -1,13 +1,13 @@
 .BadgeEdit__hero {
-    width: calc(100% -  50px);
+    width: 100%;
     padding: 2rem 0;
-    background: url('../../IMAGES/fonds.gif'), #1B1B25;
+    background: url('../../IMAGES/fonds.jpg'), #1B1B25;
     background-repeat: no-repeat;
-    background-position: center;
+    background-attachment: fixed;
     background-size: 100% 100%;
-    margin-bottom: 1rem;
+
     margin: 0 auto;
-    height: 420px;
+    height: 100%;
     border-radius: 50px;
     z-index: 0;
   }
