--- a/src/pages/styles/BadgeNew.css
+++ b/src/pages/styles/BadgeNew.css
@@ -1,13 +1,12 @@
 .BadgeNew__hero {
    width:  100%;
-   height: 600px;
+   height: 100%;
+   background-image: url('../../IMAGES/sss.jpg');
+   background-repeat:no-repeat ;
+   background-size: 100% 100%;;
+   background-attachment: fixed;
   }
 
-  .BadgeNew__hero img{
-    width: inherit;
-    height: inherit;
-
-  }
 
  .container-view{
    display: flex;
